style: estilização de fonts, cores

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-* {
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Montserrat:ital,wght@0,100;0,900;1,400;1,900&display=swap');* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -21,8 +21,8 @@
   --cor41: rgba(0, 0, 255, .5);
   --cor42: rgba(0, 0, 255, .2);
   --vertice: rgba(0, 0, 0, .45);
-  --degrade0: rgba(0, 0, 0, .3);
-  --degrade1: rgba(150, 150, 150, .3);
+  --degrade0: rgba(120, 120, 120, 1);
+  --degrade1: rgba(17, 17, 17, .8);
 
 
 }
@@ -32,19 +32,30 @@ html {
 }
 
 body {
-  background: linear-gradient(var(--degrade1) 20%, var(--degrade0) 80%), url(/img/hero_python_0.svg);
+  background: linear-gradient(var(--degrade0) 20%, var(--degrade1) 80%), url(/img/hero_python_0.svg);
   background-position: center center;
   background-size: cover;
   background-position-y: 0px;
   background-repeat: no-repeat;
 }
 header{
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 900;
   height: 10vh;
   background-color: var(--vertice);
   display: flex;
+  padding: 0 auto;
+}
+header a{
+  color: white;
+  text-decoration: none;
 }
 header aside img{
   width: 102px;
+}
+header section{
+  font-size: 4rem;
+  color: white;
 }
 header section nav ul{
   display: flex;
@@ -59,7 +70,10 @@ main {
 
 main aside img{
   width: 500px;
-  /*filter: invert(100%) sepia(94%) saturate(24%) hue-rotate(66deg) brightness(107%) contrast(106%);*/
+}
+main aside svg{
+  width: 500px;
+  fill: orange;
 }
 main section{
   display: flex;
@@ -68,13 +82,24 @@ main section{
   align-content: center;
   padding-left: 10vw;
 }
-main section h1{
-  padding-bottom: 2rem;
+main section h1, main section h2{
+  color: white;
 }
+main section h1{
+  font-family: 'Fjalla One', sans-serif;
+  font-weight: 900;
+  font-size: 6rem;
+}
+main section h2{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.8rem;
+  padding-bottom: 7rem;
+}
+
 main section ul{
   display: flex;
   list-style: none;
-
+  border: 1px;
 }
 main section ul li{
   display: flex;
@@ -85,6 +110,7 @@ main section ul li{
 }
 main section ul li img{
   width: 42px;
+  filter: invert(100%) sepia(94%) saturate(24%) hue-rotate(66deg) brightness(107%) contrast(106%);
 }
 
 footer{
@@ -95,7 +121,12 @@ footer{
   background-color: var(--vertice);
 }
 footer section{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 100;
   color: white;
+  display: flex;
+  align-items: center;
+  align-content: center;
   text-align: center;
 }
 footer article svg {
